# cross-language-data-utilities

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: python-ci.yml  release.yml
schema-snapshooter-diff/: .gitignore  README.md
schema-snapshooter-diff/.github/workflows/: main.yml
schema-snapshooter-diff/python/: .gitignore  README.md  pyproject.toml  requirements.txt  test_argparse.py
schema-snapshooter-diff/python/schema_snapshooter_diff/: main.py  schema_logic.py
schema-snapshooter-diff/python/src/: main.py  schema_logic.py
schema-snapshooter-diff/python/test_schemas/: schema_v1_copy.json
schema-snapshooter-diff/python/tests/cli/: test_cli.py
schema-snapshooter-diff/python/tests/integration/: test_get_workflow.py
schema-snapshooter-diff/venv_new/: pyvenv.cfg
schema-snapshooter-diff/venv_new/Scripts/: activate  activate.bat
tests/: test_schema_logic.py
