[project]
name = "schema-snapshooter-diff"
version = "0.0.1"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "typing_extensions>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Removed 'packages = ["schema_snapshooter_diff"]' to resolve conflict

[tool.setuptools.package-data]
"schema_snapshooter_diff" = ["py.typed"]

[tool.setuptools.packages.find]
include = ["schema_snapshooter_diff*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Trigger CI re-run
